# ASM

./: .gitignore  Cargo.toml  Makefile  README.md  addpc  asm  asm.rs  compiled  disasm  fputest  instr.rs  mandel2.s.bintext.disasm.s  out.pbm  out2.pbm  outa.txt  sample.s  sample.s-binary  sample.s-binary.hex  sample.s.binary  sample.s.bintext  sld2indata
assembly/: ack.s.binary  ack.s.bintext  fib-answer  fib2.s  fputest.s.bintext  ftoi.s.bintext  gcd.s  gcd.s.bintext  instr.rs  mandel.s.bintext  mandel2.s.binary  mandelbrot.s  mandelbrot.s.binary  minrt.s  minrt.s.binary  minrt.s.bintext  minrt.s.debug  minrt.s.ppm  minrt.s.s  minrt16-debug.s.binary  minrt16-noread.s.bintext  minrt16.s.binary  minrt16.s.bintext  sandbox.s  test.s  test.s.binary  test.s.bintext  test.s.debug  test.s.ppm
assembly_old/: ack.s.debug  ball_uart.txt  fib2.s.binary  fib2.s.bintext  gcd.s.binary  mandel.s  mandel2.s.pbm  minrt.s  minrt.s.bintext  minrt.s.debug  minrt16-debug.s  minrt16-debug.s.bintext  minrt16-debug.s.ppm  minrt16-noread.s.binary  minrt16.s  minrt16.s.binary  minrt16.s.debug  minrt512.s.ppm  read_data.txt  test.s
kankeinai/: disasm.rs  test  test.rs
sld/: base.sld
src/: ack.s  ack.s.bintext  addpc.rs  base.sld.in  computer.rs  contest.sld.in  contest_uart.txt  cup.sld.in  cup_uart.txt  disasm.rs  fib copy.s  fib.s  fib.s-bintext  fib.s.binary  fib.s.bintext  fib2.s  fib2.s.binary  fib2.s.bintext  finv_test.txt  finv_test.txt.res  fpu.rs  fputest.rs  fputest.s  fputest.s.binary  fputest2.txt  fputest2.txt.res  ftoi.s  ftoi.s.binary  instr.rs  main  main.rs  mandel.s  (+31 more)
(+11 files in other folders)
