[package]
name = "asm"
version = "0.1.0"
authors = ["kensho <aaa@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ansi_term = "0.12"


[[bin]]
name = "asm"
path = "src/main.rs"
# [[bin]]
# name = "disasm"
# path = "src/disasm.rs"
# [[bin]]
# name = "sld2indata"
# path = "src/sld2indata.rs"
# [[bin]]
# name = "addpc"
# path = "src/addpc.rs"
